[project]
name = "SimbioReader"
version = "0.5.9"
description="Python Reader for the data from SIMBIO-SYS instrument suite on-board the ESA mission BepiColombo"
dependencies = [

    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "rich-click (>=1.8.9,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "update-checker (>=0.18.0,<0.19.0)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
]
requires-python = ">=3.11"

authors = [{name="Romolo Politi", email ="Romolo.Politi@inaf.it" }]
license = {text = "GNU GPL ver3"} 
readme = "README.md"

keywords = ["data reader", "Space Mission", "BepiColombo", "SIMBIO-SYS"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
Repository = "https://github.com/SIMBIO-SYS/SimbioReader"

[project.optional-dependencies]
docs = ["sphinx"]

[project.scripts]
simbioReader = "SimbioReader.__main__:cli"
simbioInfo = "SimbioReader.infocli:cli"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

