[project]
name = "SimbioReader"
version = "0.6.0"
description="Python Reader for the data from SIMBIO-SYS instrument suite on-board the ESA mission BepiColombo"
dependencies = [

    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "rich-click (>=1.8.9,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "update-checker (>=0.18.0,<0.19.0)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
]
requires-python = ">=3.11"

authors = [{name="Romolo Politi", email ="Romolo.Politi@inaf.it" }]

readme = "README.md"

keywords = ["data reader", "Space Mission", "BepiColombo", "SIMBIO-SYS"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 2 - Pre-Alpha",
    
]



[project.urls]
Repository = "https://github.com/SIMBIO-SYS/SimbioReader"

[project.optional-dependencies]
docs = ["sphinx"]

[project.scripts]
simbioReader = "SimbioReader.cli:cli"
simbioInfo = "SimbioReader.infocli:cli"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages =[
{include ="SimbioReader", from ="src"}]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"




