[project]
name = "SimbioReader"
version = "0.6.5"
description="Python Reader for the data from SIMBIO-SYS instrument suite on-board the ESA mission BepiColombo"
dependencies = [

    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "rich-click (>=1.8.9,<2.0.0)",
    "update-checker (>=0.18.0,<0.19.0)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "semantic-version-tools (>=1.4.1,<2.0.0)",
    "mystrtools (>=0.1.0,<0.2.0)",
]
requires-python = ">=3.14, <4.0"

authors = [{name="Romolo Politi", email ="Romolo.Politi@inaf.it" }]

readme = "README.md"

keywords = ["data reader", "Space Mission", "BepiColombo", "SIMBIO-SYS"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    
]



[project.urls]
Repository = "https://github.com/SIMBIO-SYS/SimbioReader"


[project.scripts]
simbioReader = "SimbioReader.cli:cli"
simbioInfo = "SimbioReader.infocli:cli"




[tool.poetry]
packages =[
{include ="SimbioReader", from ="src"}]



[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
devel = [
    "ruff (>=0.15.4,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)"
]

[tool.pytest.ini_options]
markers = [
    "caldb: mark a test as a caldb test",
    "config: mark a test as a config test",
    "pipeline: mark a test as a pipeline test",
    "pipeline_L0: mark a test as a pipeline L0 test",
    "pipeline_step: mark a test as a pipeline step test"
]
addopts = [
    "--basetemp=/tmp/pytest",
    "--verbosity=3", 
    "--tb=line", 
    "--capture=sys", 
    "--show-capture=all",
    "--cov=SimbioReader",
    "--cov-report=term",
    "--cov-report=html:coverage/coverage_html",
    "--cov-report=xml:coverage/coverage.xml", 
    "--cov-report=json:coverage/coverage.json"

   
]
testpaths=[
    "test/"
]
log_file = "output/log/pytest_log.log"
log_file_level = "DEBUG"

log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"

log_file_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = ["."]

[tool.coverage.run]
branch=true
omit=["test/*","./prova.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["src"]
venvPath = "/home/romolo/Documenti/Progetti/SIMBIO-SYS/Software/SimbioReader"
venv = "venv"
